[tool.poetry]
name = "lab-website-citations"
version = "0.1.0"
description = "Citation update helper for the lab website."
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
manubot = "~0.6"
PyYAML = "~6.0"
diskcache = "~5.6"
rich = "~13.6"
python-dotenv = "~1.2.2"
google-search-results = "~2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
